--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat! <h1>only for test</h1>
+  Fork me? Fork you, @octocat! <h1>only for testing</h1>
 </p>
 
 </body>
